--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,23 @@ html {
 
 a {
   color: #568c36;
-  text-decoration: none;
 }
 
 a:hover {
   color: #113c00;
+}
+
+.nav a:focus {
+  outline: 3px solid #000;
+}
+
+.skip-links a {
+  position: absolute;
+  top: -3em;
+}
+
+.skip-links a:focus {
+  top: 0;
 }
 
 .masthead {
@@ -82,6 +94,11 @@ td {
 .footer {
   background-color: #113c00;
   color: #fff;
+}
+
+.under {
+  text-decoration: underline;
+  color: #113c00;
 }
 
 @media only screen and (min-width: 35em) {
