--- a/css/main.css
+++ b/css/main.css
@@ -22,15 +22,6 @@ a:hover {
   outline: 3px solid #000;
 }
 
-.skip-links a {
-  position: absolute;
-  top: -3em;
-}
-
-.skip-links a:focus {
-  top: 0;
-}
-
 .masthead {
   background-color: #568c36;
 
@@ -96,8 +87,7 @@ td {
   color: #fff;
 }
 
-.under {
-  text-decoration: underline;
+.read-more {
   color: #113c00;
 }
 
