Fix all errors in index.html

--- a/css/main.css
+++ b/css/main.css
@@ -11,20 +11,15 @@ html {
 }
 
 a {
-  color: #568c36;
+  color: #113c00;
 }
 
 a:hover {
   color: #113c00;
 }
 
-.nav a:focus {
-  outline: 3px solid #000;
-}
-
 .masthead {
   background-color: #568c36;
-
   color: #fff;
 }
 
@@ -37,11 +32,16 @@ a:hover {
 .nav a {
   color: #fff;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .nav a:hover {
   background-color: #fff;
   color: #113c00;
+}
+
+.nav a:focus {
+  outline: 3px solid #000;
 }
 
 .about {
@@ -66,6 +66,10 @@ td {
   background-color: #eeebe9;
 }
 
+.news a {
+  text-decoration: underline;
+}
+
 .contact {
   background-color: #dfdcda;
 }
@@ -73,7 +77,6 @@ td {
 .btn {
   background-color: #113c00;
   border-color: #113c00;
-
   color: #fff;
 }
 
@@ -87,8 +90,12 @@ td {
   color: #fff;
 }
 
-.read-more {
-  color: #113c00;
+.skip-links a {
+  text-decoration: underline;
+}
+
+.posts a {
+  color: #568c36;
 }
 
 @media only screen and (min-width: 35em) {
